Agrege una imagen al proyecto

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,6 @@
         a prevenir el contagio del CORONAVIRUS.
         debemos usarlo cada que vallamos a salir de la casa y asi podremos prevenir contagiar a nuestros seres queridos.
     </p>
-
+    <p><img src="imagenes/descarga.jpg" width="580"></p>
 </body>
 </html>
